--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.7.5+3
+  contacts_service: ^0.6.1
+  permission_handler: ^8.1.4+2
   cupertino_icons: ^1.0.2
   get_it: ^7.1.3
   http: ^0.13.3
