--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,20 +38,21 @@ dependencies:
   web_socket_channel: ^2.1.0
   flutter_svg: ^0.22.0
   flutter_local_notifications: ^6.0.0
-  pointycastle: ^3.2.0
-  rsa_encrypt: ^2.0.0
+#  pointycastle: ^3.2.0
+#  rsa_encrypt: ^2.0.0
   mobx: ^2.0.4
   flutter_mobx: ^2.0.1
   country_code_picker: ^2.0.2
   flutter_spinkit: ^5.0.0
   focused_menu: ^1.0.5
-  cryptography: ^2.0.2
+#  cryptography: ^2.0.2
   intl: ^0.17.0
   flutter_slidable: ^0.6.0
   libsignal_protocol_dart: ^0.5.3
-  #crypto: ^3.0.1   #Will need this later
-  encrypt: ^5.0.1
+  crypto: ^3.0.1   #Will need this later
+#  encrypt: ^5.0.1
   flutter_datetime_picker: ^1.5.1
+  crypton: ^2.0.2
 
 dev_dependencies:
   flutter_test:
