--- a/backend/register_user/package.json
+++ b/backend/register_user/package.json
@@ -16,7 +16,8 @@
     "aws-sdk": "^2.956.0",
     "google-libphonenumber": "^3.2.22",
     "utf8": "^3.0.0",
-    "node-rsa": "^1.1.1",
-    "get-random-values": "^1.2.2"
+    "get-random-values": "^1.2.2",
+    "jsbn": "^1.1.0",
+    "node-jsencrypt": "^1.0.0"
   }
 }
