--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   country_code_picker: ^2.0.2
   flutter_spinkit: ^5.0.0
   focused_menu: ^1.0.5
-#  cryptography: ^2.0.2
+  cryptography: ^2.0.2
   intl: ^0.17.0
   flutter_slidable: ^0.6.0
   libsignal_protocol_dart: ^0.5.3
