--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -209,6 +209,13 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref TableUsers
+        - Statement:
+            - Effect: Allow
+              Action:
+                - 'sns:Publish'
+              Resource:
+                - !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:*'
+
 
   RegisterPermission:
     Type: AWS::Lambda::Permission
