Fixed sms not sending

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -61,6 +61,14 @@ Parameters:
     AllowedPattern: ^[A-Za-z\-]+$
     ConstraintDescription: 'Required. Can be characters and dash only. No numbers or special characters allowed.'
 
+  SNSAccessKeyId:
+    Type: String
+    Description: (Required) The access key id to send SNS requests
+
+  SNSSecretAccessKey:
+    Type: String
+    Description: (Required) THe secret access key to send SNS requests
+
 Resources:
   # --- DynamoDB Tables --- #
   ConnectionsTable:
@@ -206,6 +214,8 @@ Resources:
       Environment:
         Variables:
           TABLE_USERS: !Ref TableUsers
+          SNS_ACCESS_KEY_ID: !Ref SNSAccessKeyId
+          SNS_SECRET_ACCESS_KEY: !Ref SNSSecretAccessKey
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref TableUsers
