--- a/backend/get_number_prekeys/package.json
+++ b/backend/get_number_prekeys/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "aws-sdk": "^2.956.0",
     "google-libphonenumber": "^3.2.22",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "blind-signatures": "^1.0.7",
+    "node-rsa": "^1.1.1"
   }
 }
