--- a/backend/get_number_prekeys/package.json
+++ b/backend/get_number_prekeys/package.json
@@ -17,6 +17,7 @@
     "google-libphonenumber": "^3.2.22",
     "utf8": "^3.0.0",
     "blind-signatures": "^1.0.7",
-    "node-rsa": "^1.1.1"
+    "node-rsa": "^1.1.1",
+    "js-sha256": "^0.9.0"
   }
 }
