--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
 #  encrypt: ^5.0.1
   flutter_datetime_picker: ^1.5.1
   crypton: ^2.0.2
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
