Changed onconnect to handle undefined phone number

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -188,6 +188,12 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref TableConnections
+        - Statement:
+            - Effect: Allow
+              Action:
+                - 'execute-api:ManageConnections'
+              Resource:
+                - !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${AtbashWebSocket}/*'
 
   OnConnectPermission:
     Type: AWS::Lambda::Permission
