--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -164,6 +164,9 @@ Resources:
   MessageboxesTable:
     Type: AWS::DynamoDB::Table
     Properties:
+      AttributeDefinitions:
+        - AttributeName: 'id'
+          AttributeType: 'S'
       KeySchema:
         - AttributeName: 'id'
           KeyType: 'HASH'
