Added TABLE_USERS environment variable to GetServerPublicKeyFunction

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -537,6 +537,7 @@ Resources:
       Environment:
         Variables:
           MESSAGEBOX_KEYPAIR: !Ref MessageboxKeypair
+          TABLE_USERS: !Ref TableUsers
 
   GetServerPublicKeyPermission:
     Type: AWS::Lambda::Permission
