--- a/backend/create_messagebox_tokens/package.json
+++ b/backend/create_messagebox_tokens/package.json
@@ -16,6 +16,8 @@
     "aws-sdk": "^2.956.0",
     "google-libphonenumber": "^3.2.22",
     "utf8": "^3.0.0",
-    "get-random-values": "^1.2.2"
+    "blind-signatures": "^1.0.7",
+    "get-random-values": "^1.2.2",
+    "node-rsa": "^1.1.1"
   }
 }
