--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   crypton: ^2.0.2
   scrollable_positioned_list: ^0.2.0-nullsafety.0
+  image_gallery_saver: ^1.6.9
 
 dev_dependencies:
   flutter_test:
