--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -602,6 +602,7 @@ Resources:
       Handler: index.handler
       Runtime: nodejs14.x
       MemorySize: 128
+      Timeout: 20
       Environment:
         Variables:
           TABLE_USERS: !Ref TableUsers
