--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   crypton: ^2.0.2
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   image_gallery_saver: ^1.6.9
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
