--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   sqflite: ^2.0.0+3
   path: ^1.8.0
   uuid: ^3.0.4
-  firebase_core: ^1.3.0
-  firebase_messaging: ^10.0.2
+#  firebase_core: ^1.3.0
+#  firebase_messaging: ^10.0.2
   flutter_secure_storage: ^4.2.0
   web_socket_channel: ^2.1.0
   flutter_svg: ^0.22.0
