--- a/web/.editorconfig
+++ b/web/.editorconfig
@@ -11,6 +11,7 @@ trim_trailing_whitespace = true
 [*.ts]
 ij_typescript_use_double_quotes = true
 ij_typescript_tab_width = 4
+indent_size = 4
 ij_typescript_spaces_within_object_literal_braces = true
 ij_typescript_spaces_within_imports = true
 
