--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   sqflite: ^2.0.0+3
   path: ^1.8.0
   uuid: ^3.0.4
-#  firebase_core: ^1.3.0
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
 #  firebase_messaging: ^10.0.2
   flutter_secure_storage: ^4.2.0
   web_socket_channel: ^2.1.0
@@ -56,6 +57,7 @@ dependencies:
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   image_gallery_saver: ^1.6.9
   url_launcher: ^6.0.9
+  qr_code_scanner: ^0.5.2
 
 dev_dependencies:
   flutter_test:
