--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_gallery_saver: ^1.6.9
   url_launcher: ^6.0.9
   qr_code_scanner: ^0.5.2
+  flutter_webrtc: ^0.6.10+hotfix.1
 
 dev_dependencies:
   flutter_test:
