--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   url_launcher: ^6.0.9
   qr_code_scanner: ^0.5.2
   flutter_webrtc: ^0.6.10+hotfix.1
+  flutter_image_compress: ^1.1.0
 
 dev_dependencies:
   flutter_test:
