--- a/backend/request_registration_code/package.json
+++ b/backend/request_registration_code/package.json
@@ -15,9 +15,6 @@
   "dependencies": {
     "aws-sdk": "^2.956.0",
     "google-libphonenumber": "^3.2.22",
-    "utf8": "^3.0.0",
-    "get-random-values": "^1.2.2",
-    "jsbn": "^1.1.0",
-    "node-jsencrypt": "^1.0.0"
+    "utf8": "^3.0.0"
   }
 }
