--- a/backend/request_registration_code/package.json
+++ b/backend/request_registration_code/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "aws-sdk": "^2.956.0",
     "google-libphonenumber": "^3.2.22",
+    "twilio": "^3.69.0",
     "utf8": "^3.0.0"
   }
 }
